--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
     "popper.js": "^1.15.0",
     "run-sequence": "^2.2.1",
     "understrap": "^0.9.1",
-    "undescores-for-npm": "^1.0.0"
+    "undescores-for-npm": "^1.0.0",
+    "vue": "^2.6.10"
+  },
+  "devDependencies": {
+    "gulp-uglify-es": "^1.0.4"
   }
 }
