--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gulp-sequence": "^1.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^1.0.4",
     "gulp-watch": "^5.0.1",
     "run-sequence": "^2.2.1",
     "undescores-for-npm": "^1.0.0"
